@@ -11,8 +11,7 @@ reports.
 
 Version 3.80+dbg-0.5cvs
 
-* Add a number of aliases (e.g. backtrace, bt, !!) 
-  and via an internal alias mechanism
+* Errors in eval issued from the debugger no longer cause termintation.
 
 * target command improvements:
    -  sets file variables if when showing file variables
@@ -20,6 +19,9 @@ Version 3.80+dbg-0.5cvs
    - add "target expand" to list target commands with "make" variables
      expanded.
    - allow @ or $@ as a target name 
+
+* Add a number of aliases (e.g. backtrace, bt, !!) 
+  and via an internal alias mechanism
 
 * remove hash stats on printing variables -- generally not wanted for
   users (rather than GNU Make maintainers)
